--- a/package.json
+++ b/package.json
@@ -10,8 +10,42 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rnmapbox/maps": "^10.1.3",
+    "@types/react-native-snap-carousel": "^3.8.10",
+    "axios": "^1.3.2",
+    "date-fns": "^3.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "react-native-bootstrap-icons": "^1.5.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.11.6",
+    "react-native-permissions": "^4.0.4",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-waveview": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
