--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-waveview": "^1.1.0"
+    "react-native-waveview": "^1.1.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
