--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@types/react-native-snap-carousel": "^3.8.10",
     "axios": "^1.3.2",
     "date-fns": "^3.1.0",
-    "ios-deploy": "^1.12.2",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-bootstrap-icons": "^1.5.0",
@@ -33,12 +32,12 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.3",
-    "react-native-paper": "^5.11.6",
+    "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.0.4",
     "react-native-reanimated": "^3.6.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-share": "^10.0.2",
     "react-native-snap-carousel": "^3.9.1",
@@ -48,8 +47,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-waveview": "^1.1.0",
-    "rn-fetch-blob": "^0.12.0"
+    "react-native-waveview": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
