--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@likashefqet/react-native-image-zoom": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -29,6 +30,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.3",
