--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,6 +86,7 @@ android {
         versionName "1.5"
         // resourceConfigurations.addAll(['en', 'es'])
         resConfigs "en", "es"
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     signingConfigs {
         debug {
