--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-bootstrap-icons": "^1.5.0",
+    "react-native-camera": "^4.2.1",
+    "react-native-date-picker": "^5.0.2",
+    "react-native-dots-pagination": "^0.3.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
     "react-native-image-zoom-viewer": "^3.0.1",
